ui/src/components/Markdown/Markdown.css
.content {
    @apply prose-sm @md:prose-base max-w-none;
    @apply prose-ul:my-0 prose-li:p-0 prose-li:my-0 prose-ul:list-disc prose-ol:list-decimal prose-p:my-2 sm:prose-p:my-4;
    @apply prose-blockquote:text-subtle-extra-dark prose-blockquote:font-serif prose-blockquote:italic prose-blockquote:border-l;
    @apply dark:prose-invert;
    @apply text-text;

    text-wrap: pretty;
    overflow-wrap: break-word;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        @apply mb-0 font-serif font-bold;
        text-wrap: pretty;
    }

    @media (max-width: 768px) {
        @container (width < 50vw) {
            h1 {
                @apply text-2xl;
            }
        }
    }

    a {
        @apply text-primary hover:underline;
    }

    h1 a {
        @apply text-text;
    }

    li > p {
        @apply my-0;
    }

    h5 {
        @apply font-bold mt-6;
    }

    :where(h5 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
        margin-top: 0;
    }

    h6 {
        @apply font-semibold underline mt-6;
    }

    :where(h6 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
        margin-top: 0;
    }

    .table-wrapper {
        @apply border border-subtle rounded-lg overflow-x-auto mt-4 mb-6 w-full;
        @apply border-subtle-extra-dark;
        table {
            margin: 0;
            width: 100%;
        }
    }

    table {
        @apply border-collapse;
    }

    thead {
        @apply font-semibold bg-subtle-light;
        @apply dark:bg-subtle-extra-dark;
    }

    td {
        @apply p-2 border-x border-subtle;
        @apply border-subtle-extra-dark;

        &:first-child {
            @apply border-l-0;
        }

        &:last-child {
            @apply border-r-0;
        }
    }

    pre {
        @apply overflow-x-auto;
    }

    :where(code):not(pre > code) {
        @apply bg-surface;
    }

    :where(code):not(
            :where([class~="not-prose"], [class~="not-prose"] *)
        )::before {
        content: "";
    }

    :where(code):not(
            :where([class~="not-prose"], [class~="not-prose"] *)
        )::after {
        content: "";
    }

    figure img {
        @apply my-0 rounded-lg;
    }

}

.footnotes {
    @apply mt-4 border-t border-t-subtle;
    clear: both;
}

